quick spelling fixes

--- a/colab_notebooks/landsat_C2_ST_v9.ipynb
+++ b/colab_notebooks/landsat_C2_ST_v9.ipynb
@@ -27,7 +27,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/steeleb/ids-ne-lakes/blob/master/landsat_C2_ST_v9.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/steeleb/ids-ne-lakes/blob/master/colab_notebooks/landsat_C2_ST_v9.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -613,8 +613,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "V1ljgJffQF1Y",
-        "cellView": "form"
+        "id": "V1ljgJffQF1Y"
       },
       "source": [
         "#@markdown This code block reduces the bounding box defined above to the largest water body present, and then counts the 30m pixels within the water body.<p>\n",
@@ -766,9 +765,9 @@
         "      ''')\n",
         "    else: #if it is contained by multiple rows\n",
         "      print('''Great news! Your lake is completely contained by multiple WRS2 path-row footprints, \n",
-        "      HOWEVER, those footprints include multiple WRS2 rows in the same WRS2 path. In order to not retreive near-duplicate \n",
-        "      temperature estimates from neghboring WRS2 rows, please *manually input* a single ROW value for `new_row_north` and \n",
-        "      `new_row_south` in the codeblock below. We reccommend you choose the row that is closest to the equator (a lower row number in the Northern \n",
+        "      HOWEVER, those footprints include multiple WRS2 rows in the same WRS2 path. In order to not retrieve near-duplicate \n",
+        "      temperature estimates from neighboring WRS2 rows, please *manually input* a single ROW value for `new_row_north` and \n",
+        "      `new_row_south` in the codeblock below. We recommend you choose the row that is closest to the equator (a lower row number in the Northern \n",
         "      Hemisphere, or a higher row number in the Southern Hemisphere).\n",
         "      ''')\n",
         "      print(\"Click the blue highlighted footprint to see the path and row\")\n",
