update pixel count due to datum conflict

--- a/colab_notebooks/landsat_C2_ST_v9.ipynb
+++ b/colab_notebooks/landsat_C2_ST_v9.ipynb
@@ -620,41 +620,21 @@
         "#@markdown Landsat scenes included in analysis must have a minimum percentage of clear lake pixels available (these are discontinuous pixels). Default is 25%.\n",
         "pctLakeCoverage = 25 #@param {type: \"number\"}\n",
         "#@markdown __Run this block__ after inputting the above parameter\n",
-        "\n",
-        "#@markdown If you recieve an error `EEException: User memory limit exceeded.`, you have selected a waterbody that is too large to process in lakeCoSTR.\n",
-        "\n",
-        "\n",
+        " \n",
         "if use_user_input_file==\"yes\":\n",
         "  try:\n",
         "    box = shp\n",
         "  except NameError:\n",
         "    raise NameError('''Cannot find user-input file. Are you using Option B or \n",
         "    Opt A bounding box? You may need to correct and rerun.''')\n",
-        "\n",
+        " \n",
         "wateroccurrence = sw.select(0)\n",
         "water = wateroccurrence.gte(pctTime)\n",
         "water = water.updateMask(water.neq(0))\n",
-        "\n",
-        "#########################\n",
-        "# Find the biggest waterbody in the bounding box\n",
-        "def addArea(feature):\n",
-        "  # returns area +/- 1sqm\n",
-        "  return feature.set({'area':feature.geometry().area(1)})  \n",
-        "\n",
-        "regions = water.addBands(wateroccurrence).reduceToVectors(\n",
-        "    reducer=ee.Reducer.min(),\n",
-        "    geometry=box,\n",
-        "    scale=30,\n",
-        "    maxPixels=5e9,\n",
-        "    geometryInNativeProjection=False,\n",
-        "    labelProperty='surfaceWater').map(addArea).sort('area', False);\n",
-        "\n",
-        "lake_outline = ee.Feature(regions.first())\n",
-        "geo = lake_outline.geometry()\n",
-        "\n",
+        " \n",
         "#########################\n",
         "# Find the best utm zone over the lake to generate CRS\n",
-        "\n",
+        " \n",
         "utm = utmbounds.filterBounds(box)\n",
         "utmJoin = ee.Join.saveBest('matches','best');\n",
         "utmCondition = ee.Filter.intersects(**{\n",
@@ -662,16 +642,35 @@
         "    \"leftField\": '.geo'\n",
         "})\n",
         "utmJoined = utmJoin.apply(lake_outline, utm, utmCondition)\n",
-        "\n",
+        " \n",
         "getZone = utmJoined.getInfo()[\"features\"][0][\"properties\"][\"matches\"][\"properties\"][\"ZONE\"]\n",
         "getHemi = utmJoined.getInfo()[\"features\"][0][\"properties\"][\"matches\"][\"properties\"][\"HEMISPHERE\"]\n",
-        "\n",
+        " \n",
         "#indicate hemisphere  \n",
         "if getHemi == 'n':\n",
         "  crs_out = f\"EPSG:326{getZone}\"\n",
         "else:\n",
         "  crs_out = f\"EPSG:327{getZone}\"\n",
         "print(\"Data will be calculated with output CRS:\",crs_out)\n",
+        " \n",
+        "#########################\n",
+        "# Find the biggest waterbody in the bounding box\n",
+        "def addArea(feature):\n",
+        "  # returns area +/- 1sqm\n",
+        "  return feature.set({'area':feature.geometry().area(1)})  \n",
+        " \n",
+        "regions = water.addBands(wateroccurrence).reduceToVectors(\n",
+        "    reducer=ee.Reducer.min(),\n",
+        "    geometry=box,\n",
+        "    scale=30,\n",
+        "    maxPixels=5e9,\n",
+        "    crs=crs_out,\n",
+        "    geometryInNativeProjection=False,\n",
+        "    labelProperty='surfaceWater').map(addArea).sort('area',False);\n",
+        " \n",
+        "lake_outline = ee.Feature(regions.first())\n",
+        "geo = lake_outline.geometry()\n",
+        "\n",
         "#########################\n",
         "# print the user some pixel count statistics\n",
         "\n",
