--- a/scripts_v1_12/AppendixS2_Landsat_Filters.Rmd
+++ b/scripts_v1_12/AppendixS2_Landsat_Filters.Rmd
@@ -20,24 +20,25 @@ R.version$version.string
 
 # point to directories
 datadir = '~/GitHub/ids-ne-lakes/data/in-situ locs/'
-C2_datadir <- '~/GitHub/ids-ne-lakes/data/colab-output/C2/'
+C2_datadir <- '~/GitHub/ids-ne-lakes/data/colab-output/C2_v1_12/'
 ```
 
 # Background:
 
 During our preliminary work to evaluate the Landsat Collection 2 surface water temperature data relative to in situ measurements for Lake Sunapee, NH, we looked carefully at the histograms of pixel-level data exported by lakeCoSTR for each Landsat scene. It was clear that some data distributions seemed ecologically unfeasible, displaying a range of 20 degrees Celsius or more over the surface of Lake Sunapee on a single flyover date (Figure S1). We assumed that these types of spread were indicative of lingering atmospheric correction issues or cloud effects, and that additional quality assurance filters were needed. In this appendix, we describe some of the filters we tried that may be helpful for others using this tool.
 
-![Landsat 4: 1990-07-21](C:/Users/steeleb/Documents/GitHub/ids-ne-lakes/data/colab-output/C2/histograms/LT04_L1TP_013030_19900721_20200915_02_T1_histo.png){width="3in"}
-![Landsat 5: 1998-07-23](C:/Users/steeleb/Documents/GitHub/ids-ne-lakes/data/colab-output/C2/histograms/LT05_L1TP_013030_19880723_20200917_02_T1_histo.png){width="3in"}
+![Landsat 4: 1990-07-21](C:/Users/steeleb/Documents/GitHub/ids-ne-lakes/data/colab-output/C2_v1_12/histograms/LT04_L1TP_013030_19900721_20200915_02_T1_histo.png){width="3in"}
+![Landsat 5: 1998-07-23](C:/Users/steeleb/Documents/GitHub/ids-ne-lakes/data/colab-output/C2_v1_12/histograms/LT05_L1TP_013030_19880723_20200917_02_T1_histo.png){width="3in"}
 
-![Landsat 7: 2018-05-31](C:/Users/steeleb/Documents/GitHub/ids-ne-lakes/data/colab-output/C2/histograms/LE07_L1TP_013030_20180531_20200829_02_T1_histo.png){width="3in"}
-![Landsat 8: 2020-09-17](C:/Users/steeleb/Documents/GitHub/ids-ne-lakes/data/colab-output/C2/histograms/LC08_L1TP_013030_20200917_20201005_02_T1_histo.png){width="3in"}
+![Landsat 7: 2018-05-31](C:/Users/steeleb/Documents/GitHub/ids-ne-lakes/data/colab-output/C2_v1_12/histograms/LE07_L1TP_013030_20180531_20200829_02_T1_histo.png){width="3in"}
+![Landsat 8: 2020-09-17](C:/Users/steeleb/Documents/GitHub/ids-ne-lakes/data/colab-output/C2_v1_12/histograms/LC08_L1TP_013030_20200917_20201005_02_T1_histo.png){width="3in"}
 
 __Figure S1. Four histograms, one from each Landsat Mission, exhibiting unusual frequency distributions as exported from the lakeCoSTR tool.__ 
 
 In addition to the possible range-of-value issues shown in Figure S1, there is also evidence of multi-modal distributions. Because we were interested in using a single median value to describe the lake surface temperature in a scene, we determined these scenes were not suitable for our analysis. Note that bimodal distributions in surface temperature across a lake surface are certainly ecologically possible outcomes and may be true for some systems or useful for some analyses. Finally, there were also scenes with negative temperatures even though pixels classified as snow or ice were filtered out in the Colab script.
 
-![Landsat filters](C:/users/steeleb/Documents/GitHub/ids-ne-lakes/figures/S2 Fig 2.png)
+![Landsat filters](C:/users/steeleb/Documents/GitHub/ids-ne-lakes/figures_v1_12/S2 Fig 2.png)
+
 __Figure S2. The five filters we applied to the Landsat Collection 2 surface water temperature data to improve the Deming regression models relating Landsat - in situ data.__
 
 Our desire was to create a filter that would remove the Landsat scenes with presumed atmospheric interference (indicated by grossly large estimated temperature ranges) or that were otherwise not suitable for our analysis. We used measurements from the extensive *in situ() data network at Lake Sunapee to define some of these filters, as well as statistical measures of distribution, including quartile values, spread, and kurtosis (the ‘tailedness’ of the distribution). While we filter for clouds and cloud shadows in Google Earth Engine using the bitmask metadata at a pixel-level, there is documented interference of clouds and cloud shadows with the surface temperature product (Cook et al. 2014). Because the potential for pixels with cloud contamination is higher in scenes with greater cloud cover, we also tried a cloud filter to eliminate data where the scene-level metadata indicated cloud cover greater than 40%.
@@ -50,17 +51,19 @@ based on the number of scenes eliminated from analysis, were:
 -   **freeze**: removing all scenes whose minimum temperature was below
     0 degrees Celsius
 
--   **IQR**: removing scenes that reported
-    interquartile temperature ranges greater than 110% in a summary of the high-frequency *in-situ* temperature record used in the main text
+-   **IQR**: ‘freeze’ filter plus removing scenes that reported
+    interquartile temperature ranges greater than 110% in a summary of the high-frequency *in-situ* temperature record used in the main text 
 
--   **kurtosis**: removing any scenes whose histogram has a kurtosis value
-    less than 2
+-   **kurtosis**: ‘freeze’ filter plus removing any scenes whose histogram has a kurtosis value
+    less than or equal to 2 
 
--   **cloud**: removing scenes with cloud cover
-    greater than 40%
+-   **cloud**: ‘freeze’ filter plus removing scenes with cloud cover
+    greater than 40% and removing all scenes whose minimum temperature was below
+    0 degrees Celsius
 
--   **range**: removing scenes that reported temperature ranges
-    greater than 110% observed in a summary of the high-frequency *in-situ* temperature record used in the main text
+-   **range**: ‘freeze’ filter plus removing scenes that reported temperature ranges
+    greater than 110% observed in a summary of the high-frequency *in-situ* temperature record used in the main text and removing all scenes whose minimum temperature was below
+    0 degrees Celsius
 
 ## Load, summarize, and filter data
 
@@ -71,10 +74,10 @@ insitu <- read.csv(paste0(datadir, 'insitu_temp_data_v2021-10-20.csv')) %>%
   mutate(datetime = as.POSIXct(datetime, tz = 'Etc/GMT+5'))
 
 #read in Collection 2 paired data, an output from the Colab Notebook
-C2ST <- read.csv(file.path(C2_datadir,paste0('C2_v2_temp_landsat_paired.csv')))
+C2ST <- read.csv(file.path(C2_datadir,paste0('sunapee_v1_12_temp_landsat_paired.csv')))
 ```
 
-To define some filters, we used the validation dataset described in section 3.1.2 of the main text, filtered to those temperatures measured between the months of May and October and the hours of 9 and 11 am (the approximate time of Landsat flyover). These values were aggregated to daily values of range, interquartile range, and number of locations contributing the ranges. From these daily values, we calculated the maximum range and interquartile range from the observed temperature data.
+To define some filters, we used the validation dataset described in section "Lake Sunapee Landsat-*in situ* dataset" of the main text, filtered to those temperatures measured between the months of May and October and the hours of 9 and 11 am (the approximate time of Landsat flyover). These values were aggregated to daily values of range, interquartile range, and number of locations contributing the ranges. From these daily values, we calculated the maximum range and interquartile range from the observed temperature data.
 
 ```{r}
 # Summarize in-situ to define spread and IQR limits ####
@@ -121,7 +124,7 @@ C2ST_maxIQR <- C2ST %>%
   filter(IQR_QAQC == 'P')
 
 C2ST_cloud <- C2ST %>% 
-  filter(cloud_cover <40)
+  filter(cloudcover_pct_scene <40)
 
 C2ST_kurtosis <- C2ST %>% 
   filter(surface_temp_kurtosis > 2)
@@ -190,7 +193,7 @@ The considerations we made when comparing filter performance were:
 3) presence/absence of outliers
 4) slope and intercept of the regression line
 
-Scenes for validation ranged from 157 (no additional QAQC) to 71 (*in situ* range filter). All datasets, including the unfiltered Collection 2 dataset, had acceptable Pearson correlation coefficients above 0.9 (Figure S3). The filters that reduced the outliers were the kurtosis filter, cloud filter, and the range filter. Of those, the kurtosis filter performed the best at reducing outliers. Of note, most outliers lie below the 1:1 line (Figure S3) - the presence of clouds and cloud shadows lowers the median temperature for each scene by reporting surface temperature values that are much cooler than in actuality.
+Scenes for validation ranged from 148 (no additional QAQC) to 71 (*in situ* range filter). All datasets, including the unfiltered Collection 2 dataset, had acceptable Pearson correlation coefficients above 0.9 (Figure S3). The filters that reduced the outliers were the kurtosis filter, cloud filter, and the range filter. Of those, the kurtosis filter performed the best at reducing outliers. Of note, most outliers lie below the 1:1 line (Figure S3) - the presence of clouds and cloud shadows lowers the median temperature for each scene by reporting surface temperature values that are much cooler than in actuality.
 
 
 ```{r, fig.dim=c(10, 6)}
@@ -290,10 +293,9 @@ DemingFigure_d <- ggplot(C2ST_kurtosis, aes(x = is_temp_med, y = surface_temp_me
             y = 23,
             size = 4,
             hjust = 0)+
-  labs(x = '',
-       y = 'median Landsat-derived\nsurface temperature (deg C)',
-       title = 'kurtosis filter') +
-    theme_bw() +
+  labs(x = expression(bold(paste(italic('in-situ'), ' median water temp (deg C)'))),
+       y = '\n',
+       title = 'kurtosis filter') +    theme_bw() +
   theme(plot.title = element_text(hjust = 0.5),
         plot.subtitle = element_text(hjust = 0.5)) +
   coord_cartesian(xlim = c(0, 27),
@@ -316,8 +318,8 @@ DemingFigure_e <- ggplot(C2ST_cloud, aes(x = is_temp_med, y = surface_temp_media
             y = 23,
             size = 4,
             hjust = 0)+
-  labs(x = expression(bold(paste(italic('in-situ'), ' median water temp (deg C)'))),
-       y = '\n',
+    labs(x = '',
+       y = 'median Landsat-derived\nsurface temperature (deg C)',
        title = 'cloud filter') +
     theme_bw() +
   theme(plot.title = element_text(hjust = 0.5),
@@ -352,7 +354,7 @@ DemingFigure_f <- ggplot(C2ST_maxrange, aes(x = is_temp_med, y = surface_temp_me
                   ylim = c(0, 27))
 
 
-DemingFigure <- plot_grid(DemingFigure_a, DemingFigure_b, DemingFigure_c, DemingFigure_d, DemingFigure_e, DemingFigure_f,
+DemingFigure <- plot_grid(DemingFigure_a, DemingFigure_b, DemingFigure_c, DemingFigure_e, DemingFigure_d, DemingFigure_f,
                    ncol = 3,
                    labels = c('a', 'b', 'c', 'd', 'e', 'f', '', 'g', ''),
                    label_x = 0.15)
@@ -368,30 +370,30 @@ While increasing the stringency of Landsat scene filters generally led to increa
 # Plot slope and intercept with 95%ci ####
 slope_int_table <- NULL
 
-slope_int_table$model = c( 'C2ST', 'C2ST_freeze', 'C2ST_maxrange', 'C2ST_kurtosis', 'C2ST_maxIQR', 'C2ST_cloud')
+slope_int_table$model = c( 'C2ST', 'C2ST_freeze', 'C2ST_maxrange', 'C2ST_maxIQR','C2ST_kurtosis',  'C2ST_cloud')
 slope_int_table$slope = c(C2_deming$coefficients[2],
                           C2_freeze_deming$coefficients[2],
                           C2_maxrange_deming$coefficients[2],
-                          C2_kurtosis_deming$coefficients[2],
                           C2_maxIQR_deming$coefficients[2],
+                          C2_kurtosis_deming$coefficients[2],
                           C2_cloud_deming$coefficients[2])
 slope_int_table$intercept = c(C2_deming$coefficients[1],
                               C2_freeze_deming$coefficients[1],
                               C2_maxrange_deming$coefficients[1],
-                              C2_kurtosis_deming$coefficients[1],
                               C2_maxIQR_deming$coefficients[1],
+                              C2_kurtosis_deming$coefficients[1],
                               C2_cloud_deming$coefficients[1])
 slope_int_table$slope_se = c(C2_deming$se[2],
                              C2_freeze_deming$se[2],
                              C2_maxrange_deming$se[2],
-                             C2_kurtosis_deming$se[2],
                              C2_maxIQR_deming$se[2],
+                             C2_kurtosis_deming$se[2],
                              C2_cloud_deming$se[2])
 slope_int_table$int_se = c(  C2_deming$se[1],
                              C2_freeze_deming$se[1],
                              C2_maxrange_deming$se[1],
-                             C2_kurtosis_deming$se[1],
                              C2_maxIQR_deming$se[1],
+                             C2_kurtosis_deming$se[1],
                              C2_cloud_deming$se[1])
 slope_int_table <- as.data.frame(slope_int_table)
 
@@ -435,6 +437,7 @@ slope_int_fig <- plot_grid(slope_fig, int_fig,
                            label_size = 12)
 slope_int_fig
 ```
+
 __Figure S4. A simple comparison of estimated slope (a) and intercept (b) with upper and lower 95% confidence intervals for each of the Collection 2 (raw + filtered) datasets presented in Figure C indicates that the cloud filter dataset’s Deming regression provided a slope closest to 1 and an intercept closest to 0 (indicated by the dashed line on each panel). Datasets are ordered by increasing stringency, as measured by the number of scenes in the validation dataset, from left to right.__
 
 Because the two filters that seemed the most promising were the kurtosis and cloud filters, we carried out all analyses described in the main text with both filters. We chose the kurtosis filter after this exercise, because it removed a number of outliers in the long-term monthly temperature analysis that the cloud filter did not. We suspect that kurtosis, a measure of tailedness, was a successful filter because it incorporates shape and range in a single value, and we suspect these are the symptoms of cloud cover for this system. Additionally, the kurtosis filter resulted in a dataset that did not require calibration for Lake Sunapee. Importantly, though, the kurtosis filter threshold (we used a value of 2) may have to be changed for other systems - analyses at other lakes that have *in situ* data for ground truthing will be needed to determine if the value we chose is transferable.
